fixed full-height issue on mobile

--- a/HTML/dark/css/style.css
+++ b/HTML/dark/css/style.css
@@ -727,7 +727,7 @@ button:focus {
         display: none;
     }
     .h-100vh {
-        height: auto;
+        /* height: auto; */
         padding: 120px 0 150px;
     }
     .header-bg-img {
